--- a/src/StyleSheets/form.css
+++ b/src/StyleSheets/form.css
@@ -116,23 +116,26 @@
     /* display: flex;
     flex-direction: row;
     justify-content: flex-start; */
-    display:grid;
+    display: grid;
     grid-template-columns: 0.6fr 1fr 2fr;
     background-color: white;
     gap: 1rem;
     border-radius: 1.5rem;
+    font-family: 'Space Grotesk';
+    font-style: normal;
+    font-weight: 500;
+    line-height: 15px;
+    letter-spacing: 0.3px;
+    font-feature-settings: 'liga' off;
     /* padding: 1.5rem; */
 }
-.add_member button {
+.add_member .addTeam {
     display: flex;
     flex-direction: row;
     /* padding: 6px 10px; */
     gap: 4px;
     width: max-content;
     height: max-content;
-    line-height: 15px;
-    letter-spacing: 0.3px;
-    font-feature-settings: 'liga' off;
     cursor: pointer;
     /* Purple */
     color: #793EF5;
@@ -142,13 +145,79 @@
     border: 1px dashed #793EF5;
     border-radius: 8px;
 }
-.add_member div{
-  align-self: center;
-  margin-right: 1rem;
+.add_member div {
+    align-self: center;
+    margin-right: 1rem;
 }
 
-#role-error{
-  display:flex;
-  justify-content:flex-end;
-  align-self: flex-end;
+#role-error {
+    display: flex;
+    justify-content: flex-end;
+    align-self: flex-end;
+}
+/*===============Role Form===================*/
+/*Role Search*/
+.roleSearch {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    margin: 0 12px 20px 2px;
+    /* padding: 12px 12px 12px 16px; */
+    width: 100%;
+    height: 48px;
+    background: #FFFFFF;
+}
+.roleSearch ::placeholder {
+    width: auto;
+    height: 24px;
+    padding-left: 44px;
+    font-size: 16px;
+}
+
+/*Role Description*/
+.roledesc {
+    width: 132px;
+    height: 24px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    margin: 20px 0 12px;
+    font-size: 16px;
+    line-height: 24px;
+    color: #1E1E1E;
+}
+
+.role-field {
+
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 12px 12px 20px 16px;
+    gap: 10px;
+    width: 552px;
+    min-height: 195px;
+    /* Snow */
+
+    background: #FFFFFF;
+    /* Purple */
+    border: 1px solid #793EF5;
+    border-radius: 12px;
+
+}
+
+
+.role-field textarea {
+    position: absolute;
+    width: 100%;
+    height: max-content;
+    order: none;
+    overflow: auto;
+    outline: none;
+    resize: none;
+    background-color: transparent;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    border: none;
+
 }
