--- a/src/Components/apprenticeship_form/RoleModal/modal.module.css
+++ b/src/Components/apprenticeship_form/RoleModal/modal.module.css
@@ -1,7 +1,8 @@
 .modalWrapper {
     position: absolute;
-    min-width: 100%;
+    width: 100%;
     height: 120%;
+    margin-right: 0;
     top: 0;
     left: 0;
     right: 0;
@@ -13,7 +14,7 @@
 
 .modal {
     width: 670px;
-    height: max-content;
+    height: auto;
     padding:24px;
     background: white;
     top: 5em;
