--- a/src/StyleSheets/form.css
+++ b/src/StyleSheets/form.css
@@ -170,13 +170,13 @@
 .roleSearch ::placeholder {
     width: auto;
     height: 24px;
-    padding-left: 44px;
     font-size: 16px;
+    
 }
 
 /*Role Description*/
 .roledesc {
-    width: 132px;
+    width: max-content;
     height: 24px;
     display: flex;
     flex-direction: row;
@@ -220,4 +220,48 @@
     box-shadow: none;
     border: none;
 
+}
+
+/*Required skills*/
+.req-skills{
+width:max-content;
+}
+/*Skills selection*/
+
+.Skills-select{
+    position:relative;
+    width:552px;
+    height: 48px;
+    display: flex;
+flex-direction: row;
+/* align-items: flex-start; */
+/* padding: 12px 12px 12px 16px; */
+background: #FFFFFF;
+/* Purple */
+
+border: 1px solid #793EF5;
+border-radius: 12px;
+
+/* Inside auto layout */
+
+flex: none;
+order: 1;
+flex-grow: 0;
+}
+.skills-text{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 24px;
+    font-size: 16px;
+    line-height: 24px;
+    /* identical to box height, or 150% */
+    
+   
+    letter-spacing: 0.3px;
+    font-feature-settings: 'liga' off;
+    
+    color: #1E1E1E;
+    
+    opacity: 0.3;    
 }
