--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,11 @@ body {
   background-color: #f1f4f8;
 }
 
+html{
+margin: 0;
+padding: 0;
+}
+
 input {
   font-family: "Space Grotesk", sans-serif;
   border: none;
