--- a/src/StyleSheets/form.css
+++ b/src/StyleSheets/form.css
@@ -123,7 +123,19 @@
     display: none;
 }
 
-
+#introduction_field #filenameDisplayer {
+    width: fit-content;
+    padding: 0.625rem 1rem;
+    display: flex;
+    justify-content: space-between;
+    background-color: #EDEAFF;
+    color: var(--color_purple);
+    border-radius: 0.75rem;
+    font-size: 1rem;
+    font-weight: 600;
+    align-items: center;
+    gap: 1rem;
+}
 
 
 /*=============Team Types=================*/
@@ -170,8 +182,6 @@
 .add_member .addTeam {
     display: flex;
     flex-direction: row;
-    /* padding: 6px 10px; */
-    gap: 4px;
     width: max-content;
     height: max-content;
     cursor: pointer;
@@ -223,7 +233,7 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    margin: 5px 0 4px;
+    margin: 0px 0 4px;
     font-size: 16px;
     line-height: 24px;
     color: #1E1E1E;
@@ -259,9 +269,6 @@
     border: none;
 }
 
-
-
-
 /*Required skills*/
 .req-skills {
     width: max-content;
@@ -295,7 +302,19 @@
     opacity: 0.3;
 }
 
+/*===================Minimum Hours======================*/
 
+.minHours input[type='number']::-webkit-inner-spin-button, 
+.minHours input[type='number']::-webkit-outer-spin-button { 
+    -webkit-appearance: none;    
+    appearance: none;
+    margin: 0;  
+}
+.minHours input[type='number'], 
+.minHours input[type='number']:hover,
+.minHours input[type='number']:focus {
+  -moz-appearance: textfield;
+}
 
 /******** Team Admin ********/
 
