Location preference component added

--- a/src/Components/apprenticeship_form/Modals/modal.module.css
+++ b/src/Components/apprenticeship_form/Modals/modal.module.css
@@ -9,6 +9,7 @@
     background: #0000005e;
     justify-content: center;
     align-items: center;
+    /* display: flex; */
     justify-content: center;
     align-items: center;
     padding-block: 1.5rem;
@@ -35,7 +36,7 @@
 .modalhead {
     width: 670px;
     display: grid;
-    grid-template-columns: 5fr 0.2fr 0.5fr;
+    grid-template-columns: 5fr 1fr 0.5fr;
     top: 0;
 
     /* margin-bottom:26px; */
@@ -50,9 +51,11 @@
     line-height: 24px;
     padding-left: 30px;
     padding-top: 24px;
+    /* identical to box height, or 120% */
     display: flex;
     align-items: center;
     letter-spacing: 0.3px;
+    font-feature-settings: 'liga'off;
     color: #1E1E1E;
 }
 
@@ -69,9 +72,7 @@
 
 
 .btnClose {
-    position: relative;
-    display: flex;
-    align-self: end;
+    position: absolute;
     height: 24px;
     width: 24px;
     top: 30px;
@@ -80,9 +81,9 @@
 }
 
 #btnrole {
-    position: relative;
+    position: absolute;
     width: 82px;
-    margin: 24px 24px 0 0;
+    margin-right: 24px;
     height: 36px;
     background: #793EF5;
     border-radius: 8px;
@@ -110,16 +111,3 @@
         transform: translateY(0);
     }
 }
-
-@media only screen and (max-width: 646px) {
-    .modalhead {
-        width: 670px;
-        display: grid;
-        grid-template-columns: 5fr 1fr 1.3fr;
-        top: 0;
-        position: absolute;
-    }
-    textarea{
-        padding-right: 6px;
-    }
-    }
