--- a/src/StyleSheets/form.css
+++ b/src/StyleSheets/form.css
@@ -59,8 +59,11 @@
 
 .title_field::placeholder {
     color: var(--color_dark);
-    opacity: 0.3;
+    font-weight: 500;
+    opacity: 0.4 !important;
 }
+
+
 
 .title_field {
     font-size: 1.125rem;
@@ -138,6 +141,8 @@
 }
 
 
+
+
 /*=============Team Types=================*/
 #team_type_field .form_field {
     display: grid;
@@ -182,6 +187,8 @@
 .add_member .addTeam {
     display: flex;
     flex-direction: row;
+    /* padding: 6px 10px; */
+    gap: 4px;
     width: max-content;
     height: max-content;
     cursor: pointer;
@@ -210,16 +217,18 @@
 /*Role Search*/
 .roleSearch {
     display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    margin: 0 12px 0px 2px;
+    align-items: center;
+    /* justify-content: center; */
+    /* margin: 0 12px 20px 2px; */
     /* padding: 12px 12px 12px 16px; */
     width: 100%;
     height: 48px;
     background: #FFFFFF;
 }
 
-.roleSearch ::placeholder {
+
+
+.roleSearch::placeholder {
     width: auto;
     height: 24px;
     font-size: 16px;
@@ -232,8 +241,8 @@
     height: 24px;
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
-    margin: 0px 0 4px;
+    align-items: center;
+    /* margin: 20px 0 12px; */
     font-size: 16px;
     line-height: 24px;
     color: #1E1E1E;
@@ -243,35 +252,30 @@
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    padding: 12px 12px 20px 12px;
-    width: 99%;
+    padding: 0.75rem 1rem;
+    gap: 10px;
+    width: 100%;
     min-height: 195px;
     /* Snow */
     background: #FFFFFF;
     /* Purple */
-    border: 1px solid #793EF5;
-    border-radius: 12px;
+    border: 1px solid #CECECE;
+    border-radius: 0.75rem;
+
 }
 
 .role-field textarea {
-    position: absolute;
-    width: 89%;
-   margin-right: 10px;
-    min-height: 170px;
-    order: none;
-    overflow: auto;
-    outline: none;
-    resize: none;
-    background-color: transparent;
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    box-shadow: none;
-    border: none;
+    font-size: 1rem;
+    width: 100%;
 }
+
+
+
 
 /*Required skills*/
 .req-skills {
     width: max-content;
+
 }
 
 /*Skills selection*/
@@ -279,14 +283,21 @@
 .Skills-select {
     position: relative;
     width: 100%;
-    height: 48px;
-    display: flex;
+    display: flex !important;
     flex-direction: row;
     background: #FFFFFF;
-    /* Purple */
-    border: 1px solid #793EF5;
-    border-radius: 12px;
+    border: 1px solid #CECECE !important;
+    border-radius: 0.75rem !important;
+    align-items: center;
+    padding: 0 !important;
+
 }
+
+.Skills-select>input[type=number] {
+    flex-grow: 1;
+    padding-inline: 0.7rem;
+}
+
 
 .skills-text {
     display: flex;
@@ -299,22 +310,11 @@
     letter-spacing: 0.3px;
     font-feature-settings: 'liga'off;
     color: #1E1E1E;
-    opacity: 0.3;
+    opacity: 0.7;
+    text-transform: none;
 }
 
-/*===================Minimum Hours======================*/
 
-.minHours input[type='number']::-webkit-inner-spin-button, 
-.minHours input[type='number']::-webkit-outer-spin-button { 
-    -webkit-appearance: none;    
-    appearance: none;
-    margin: 0;  
-}
-.minHours input[type='number'], 
-.minHours input[type='number']:hover,
-.minHours input[type='number']:focus {
-  -moz-appearance: textfield;
-}
 
 /******** Team Admin ********/
 
@@ -367,8 +367,6 @@
 
 .usernameBox>input::placeholder,
 .urlBox>input::placeholder {
-    opacity: 0.5;
-    color: var(--color_dark);
     font-weight: 600;
 }
 
