--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   box-sizing: border-box !important;
   padding: 0;
   margin: 0;
+  font-family: "Space Grotesk", sans-serif !important;
 }
 
 body {
@@ -36,6 +37,13 @@ textarea {
 
 textarea::-webkit-scrollbar {
   display: none;
+}
+
+
+input[type=text]::placeholder,
+textarea::placeholder {
+  opacity: 0.5;
+  color: var(--color_dark);
 }
 
 
